[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Dmitrii Odnorog <dm.odnorog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
